fix name overflow

--- a/src/Components/Layout/Header.module.css
+++ b/src/Components/Layout/Header.module.css
@@ -7,9 +7,10 @@
   background-color: #8a2b06;
   color: white;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 0 10%;
+  padding: 0.1rem 0.7rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   z-index: 10;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
